<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="81dp"
        android:layout_height="57dp"
        android:layout_marginTop="658dp"
        android:layout_marginEnd="314dp"
        android:layout_marginRight="314dp"
        android:layout_marginBottom="16dp"
        android:background="#BA191818"
        android:contentDescription="@string/todo"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test" />

    <TextView
        android:id="@+id/text_view_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/_00_00"
        android:textColor="@android:color/black"
        android:textSize="70sp" />

    <TextView
        android:id="@+id/text_view_countdown2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/time"
        android:textColor="@android:color/black"
        android:textSize="70sp"
        android:textAlignment ="center"
        android:textColorLink="@color/purple_700"

        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/button_start_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_centerHorizontal="true"
        android:text="@string/start2" />

    <Button
        android:id="@+id/button_reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_view_countdown"
        android:layout_marginStart="-89dp"
        android:layout_marginTop="67dp"
        android:layout_toEndOf="@+id/button_start_pause"
        android:text="@string/reset2"
        android:visibility="invisible"
        tools:visibility="visible" />

</RelativeLayout>